test/self-test/phase2/test_1.out
Error type 5 at Line 4: unmatching type on both sides of assignment
